# vulkan-playground

./: CMakeLists.txt  cmake-2019-x64.bat
.tools/: index.cmake  packaging.cmake  utils.cmake
.tools/scripts/: ModifyDeploymentXML.ps1  copy-directory.js  copy-file.js  copy-sign-file.js  make_clickonce_manifests.js  make_package_json.js  make_transpiled_typescript.js  pack_npm_archive.js  package.json
.tools/scripts/cli/: index.d.ts  index.js
.tools/scripts/signtool/: default-certificate.pfx  make-default-certificate.ps1
Render3d/: CmakeLists.txt  UserInterface.cpp  UserInterface.h  main.cpp
Tutorial/: CmakeLists.txt  main.cpp
